# axetract

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FEEDBACK.md  FEEDBACK_with_comments.md  LICENSE  README.md  SECURITY.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint-test.yml  publish.yml
api/components/extractor/: index.html
api/components/postprocessor/: index.html
api/components/preprocessor/: index.html
api/components/pruner/: index.html
api/data_types/: index.html
api/llm/: index.html
api/pipeline/: index.html
axe_server/: README.md  client_example.py  main.py
axetract/: data_types.py
axetract/extractor/: base.py
axetract/pruner/: base.py
benchmarks/: basic.py
contributing/: index.html
docs/: contributing.md  faq.md  getting-started.md  index.md
docs/api/: data_types.md  llm.md  pipeline.md  utils.md
docs/api/components/: extractor.md  postprocessor.md  preprocessor.md  pruner.md
docs/examples/: basic.md  batch.md  vllm.md
docs/user-guide/: architecture.md  components.md  pipeline.md  server.md
examples/: basic_usage.py
examples/basic/: index.html
examples/batch/: index.html
examples/vllm/: index.html
faq/: index.html
getting-started/: index.html
notebooks/: test.ipynb
plans/: issue-9-unify-extract-api.md
search/: search_index.json
src/axetract/: __init__.py  data_types.py  exceptions.py  pipeline.py  server.py
src/axetract/extractor/: axe_extractor.py  base_extractor.py
src/axetract/llm/: base_client.py  hf_client.py  litellm_client.py  llm_utils.py  vllm_client.py
src/axetract/postprocessor/: axe_postprocessor.py  base.py  base_postprocessor.py
src/axetract/preprocessor/: axe_preprocessor.py  base.py  base_preprocessor.py
src/axetract/prompts/: pruner_prompt.py  qa_prompt.py  schema_prompt.py
src/axetract/pruner/: axe_pruner.py  base_pruner.py
src/axetract/utils/: file_util.py  html_util.py  json_util.py  llm_util.py  logging_util.py  seed_util.py
stylesheets/: extra.css
tests/: test_axe_extractor.py  test_axe_postprocessor.py  test_axe_preprocessor.py  test_axe_pruner.py  test_base_client.py  test_data_types.py  test_e2e.py  test_pipeline.py  test_utils.py
tests/e2e/: test_e2e.py
tests/postprocessor/: test_axe_postprocessor.py
tests/preprocessor/: test_axe_preprocessor.py
tests/utils/: test_chunk.py  test_clean_html.py  test_extract.py  test_json_util.py  test_normalize.py
user-guide/architecture/: index.html
user-guide/components/: index.html
user-guide/pipeline/: index.html
user-guide/server/: index.html
