[project]
# metadata
name = "axetract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    {name="Khaled Alshaer", email = "khaled.w.alshaer@gmail.com"},
    {name="Abdelrahman Mansour", email = "abdelrahman.f.mansour@gmail.com"},
]

# dependencies
dependencies = [
    "html-chunking>=0.0.4",
    "htmlrag>=0.1.1",
    "json-repair>=0.58.1",
    "peft>=0.18.1",
    "pydantic>=2.13.0b2",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "vllm>=0.16.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pytest>=9.0.2",
    "mkdocs-material>=9.7.3",
]


# build
[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "axetract"
module-root = "src"
