[project]
name = "axetract"
version = "0.1.0"
description = "Low-Cost Cross-Domain Web Structured Information Extraction using specialized LoRA adapters."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    {name="Abdelrahman Mansour", email = "abdelrahman.f.mansour@gmail.com"},
    {name="Khaled Alshaer", email = "khaled.w.alshaer@gmail.com"},
]
keywords = ["web-extraction", "llm", "structured-data", "html-pruning", "lora", "vllm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.135.1",
    "html-chunking>=0.0.4",
    "htmlrag>=0.1.1",
    "json-repair>=0.58.1",
    "peft>=0.18.1",
    "pydantic>=2.13.0b2",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.16.0",
]

[project.urls]
Repository = "https://github.com/abdo-Mansour/axetract"
Documentation = "https://abdo-mansour.github.io/axetract/"
"Issue Tracker" = "https://github.com/abdo-Mansour/axetract/issues"

[project.scripts]
axe-server = "axetract.server:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1,<2.0.0",
    "pytest>=8.0.0",
    "mkdocs-material>=9.7.3",
    "mkdocs-autoapi[python]",
    "mkdocstrings[python]>=1.0.3",
    "ruff>=0.15.4",
    "jupyter>=1.1.1",
    "notebook>=7.5.4",
    "ipywidgets>=8.1.8",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]
ignore = ["D100", "D104", "E501"] # Ignore missing docstrings in modules and packages, and long lines

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D1"] # Don't require docstrings in tests
"*.ipynb" = ["W291"] # Ignore trailing whitespace in notebooks
"*.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["axetract"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "axetract"
module-root = "src"
